# stereo-camera-calibration

./: .clang-format  .gitignore  CMakeLists.txt  README.MD  calibrate.py  calibration.cpp  config.toml  main.cpp  prophesee_dvs_recorder.cpp  qodana.yaml  vcpkg.json
.github/workflows/: cpp-linter.yaml  qodana_code_quality.yml
recoding/: CMakeLists.txt  Calibration.hpp  Image_validator.cpp  Image_validator.hpp  Utility.cpp  Utility.hpp  VideoViewer.cpp  VideoViewer.h  VideoViewer.hpp  Video_viewer.cpp  Video_viewer.hpp  basler_rgb_recorder.cpp  calibrate.py  calibration.cpp  camera_manager.cpp  check_valid_images.cpp  check_valid_images.py  config.toml  detection_validator.cpp  detection_validator.h  detection_validator.hpp  image_validator.cpp  image_validator.hpp  job_data.hpp  manager.cpp  prophesee_dvs_recorder.cpp  utility.cpp  utility.h  utility.hpp  vcpkg.json.bak  videoViewer.cpp  video_viewer.cpp  video_viewer.hpp
recoding/recorders/: CMakeLists.txt  basler_cam_worker.cpp  basler_cam_worker.hpp  basler_rgb_recorder.cpp  basler_rgb_recorder.h  basler_rgb_recorder.hpp  camera_worker.cpp  camera_worker.hpp  prophesee_cam_worker.cpp  prophesee_cam_worker.hpp  prophesee_dvs_recorder.cpp  prophesee_dvs_recorder.h  prophesee_dvs_recorder.hpp
src/: camera_calibration.cpp  camera_calibration.hpp  manager.cpp  utility.cpp  utility.hpp  yaccp.cpp
src/cli/: board_creation.cpp  board_creation.hpp  calibration.cpp  calibration.hpp  orchestrator.cpp  orchestrator.hpp  recording.cpp  recording.hpp  validation.cpp  validation.hpp
src/config/: board.cpp  board.hpp  detection.cpp  detection.hpp  orchestrator.cpp  orchestrator.hpp  recording.cpp  recording.hpp  viewing.cpp  viewing.hpp
src/executors/: board_runner.cpp  board_runner.hpp  calibration_runner.cpp  calibration_runner.hpp  recording_runner.cpp  recording_runner.hpp  validation_runner.cpp  validation_runner.hpp
src/global_variables/: cli_defaults.hpp  config_defaults.hpp  program_defaults.hpp
src/recoding/: detection_validator.cpp  detection_validator.hpp  job_data.hpp  video_viewer.cpp  video_viewer.hpp
src/recoding/recorders/: basler_cam_worker.cpp  basler_cam_worker.hpp  camera_worker.cpp  camera_worker.hpp  prophesee_cam_worker.cpp  prophesee_cam_worker.hpp
src/tools/: create_board.cpp  create_board.hpp  image_validator.cpp  image_validator.hpp
tools/: CMakeLists.txt  create_charuco_board.cpp  vcpkg.json.bak
